@@ -1,3 +1,6 @@
+2011-11-25 aurel
+* Updated to use last code with new simulation
+
 2010-02-19 yusei
 * Move base_amount/payroll and base_amount/payroll/l10n categories to erp5_payroll.
 
